tests/errors/tc_expr_cast_struct.lx
@module "main"

const MyStruct -> struct { x: int, y: int };

pub const main -> fn () int {
    let p: *int = cast<*int>(MyStruct { x: 1, y: 2 });
    return 0;
}
